--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Encontre os acessórios que te representam: Pratas 925, Miçangas e Cetim. Confira!">
     <title>LARIS ACESSÓRIOS - Acessórios baratos, Entrega Rápida</title>
 
     <script src="https://kit.fontawesome.com/d5feb0f1e8.js" crossorigin="anonymous"></script>
@@ -678,7 +679,7 @@
         <div class='formasdepag'>
             <h2>Selos</h2>
             <div class="selos">
-                <img src="https://api.netlify.com/api/v1/badges/ed6adf4a-3916-4f72-9fb5-f808ed37ff96/deploy-status" alt="">
+                
             </div>
         </div>
     </section>
