--- a/novidades.html
+++ b/novidades.html
@@ -172,6 +172,26 @@
         </section>
 
         <div class='estoque-prata'>
+            <a href="prata/tornozeleira-bolinha.html">
+                <div class='item-prata'>
+                    <img src="./imgs/Tornozeleira bolinha (1).jpeg" alt="">
+                    <div class="text-prata">
+                        <p class='novidade-loja'>Disponível</p>
+                        <h1 class="nome-prata">Tornozeleira Bolinha</h1>
+                        <div class='estrelas'>
+                            <img src="imgs/Nenhuma estrela.png" alt="">
+                        </div>
+                        <div class="promocao">
+                            <p class="preço-loja">R$ 50,00</p>
+                            <p class="opcoesdepaga">Pague à vista ou Pix</p>
+                        </div>
+                        <div class="botaocomprarprata">
+                            <label>VER DETALHES</label>
+                        </div>
+                         
+                    </div>
+                </div>
+            </a>
             <a href="prata/anel-colorido.html">
                 <div class='item-prata'>
                     <img src="./imgs/anel-colorido (1).jpeg" alt="">
@@ -263,26 +283,6 @@
                         </div>
                         <div class="promocao">
                             <p class="preço-loja">R$ 55,00</p>
-                            <p class="opcoesdepaga">Pague à vista ou Pix</p>
-                        </div>
-                        <div class="botaocomprarprata">
-                            <label>VER DETALHES</label>
-                        </div>
-                         
-                    </div>
-                </div>
-            </a>
-            <a href="prata/tornozeleira-bolinha.html">
-                <div class='item-prata'>
-                    <img src="./imgs/Tornozeleira bolinha (1).jpeg" alt="">
-                    <div class="text-prata">
-                        <p class='esgotado-loja'>ESGOTADO</p>
-                        <h1 class="nome-prata">Tornozeleira Bolinha</h1>
-                        <div class='estrelas'>
-                            <img src="imgs/Nenhuma estrela.png" alt="">
-                        </div>
-                        <div class="promocao">
-                            <p class="preço-loja">R$ 50,00</p>
                             <p class="opcoesdepaga">Pague à vista ou Pix</p>
                         </div>
                         <div class="botaocomprarprata">
