--- a/prata/tornozeleira-bolinha.html
+++ b/prata/tornozeleira-bolinha.html
@@ -140,19 +140,20 @@
                         <img src="../imgs/Nenhuma estrela.png" alt="">
                     </div>
                     <h2>Valor: R$50,00</h2>
+                    <h2 style="color: red">Este produto acompanha Extensor(4cm)</h2>
                     <h2>Quantidade: <select name="Quantidade" id="quant">
                         <option value="1" selected>1 unidade</option>
                     </select></h2>
                     <div class='tamanhocenterleft'>
                         <h2 class="tamanhofrase">Selecione Tamanho: <select name="Tamanho" id="tamanho">
-                            <option value="Único" selected>Único</option>
+                            <option value="23cm" selected>23cm</option>
                         </select>
                         </h2>
                             <a href="../institucional/guia-de-tamanhos/tornozeleiras.html" target="_blank"><u>Guia de Tamanhos</u></a>
                     </div>
-                    <!--<label onclick="tornozeleirabolinha_comp()"><i class="fas fa-shopping-bag"></i> COMPRAR</label>
-                    <label id='cart' onclick="tornozeleirabolinha_enco()"><i class="fas fa-cart-plus"></i> ADICIONAR AO CARRINHO</label>-->
-                    <label class="indisponivel" onclick="tornozeleirabolinha_indisponivel()"><i class="fas fa-shopping-bag"></i> AVISE-ME QUANDO CHEGAR</label>
+                    <label onclick="tornozeleirabolinha_comp()"><i class="fas fa-shopping-bag"></i> COMPRAR</label>
+                    <label id='cart' onclick="tornozeleirabolinha_enco()"><i class="fas fa-cart-plus"></i> ADICIONAR AO CARRINHO</label>
+                    <!--<label class="indisponivel" onclick="tornozeleirabolinha_indisponivel()"><i class="fas fa-shopping-bag"></i> AVISE-ME QUANDO CHEGAR</label>-->
                     <p id='entregue'>Este produto é vendido e entregue pela <a href=''>LARI'S</a>.</p>
 
                     <p class="compartilhar">Compartilhe: <a href='https://api.whatsapp.com/send/?text=https://laris-acessorios.netlify.app/prata/tornozeleira-bolinha.html' target="_blank"><i class="fa-brands fa-square-whatsapp"></i></a></p>
