--- a/index.html
+++ b/index.html
@@ -465,6 +465,26 @@
     </section>
 
     <div class='estoque-prata-index'>
+        <a href="prata/tornozeleira-bolinha.html">
+            <div class='item-prata'>
+                <img src="./imgs/Tornozeleira bolinha (1).jpeg" alt="">
+                <div class="text-prata">
+                    <p class='novidade-loja'>Disponível</p>
+                    <h1 class="nome-prata">Tornozeleira Bolinha</h1>
+                    <div class='estrelas'>
+                        <img src="imgs/Nenhuma estrela.png" alt="">
+                    </div>
+                    <div class="promocao">
+                        <p class="preço-loja">R$ 50,00</p>
+                        <p class="opcoesdepaga">Pague à vista ou Pix</p>
+                    </div>
+                    <div class="botaocomprarprata">
+                        <label>VER DETALHES</label>
+                    </div>
+                     
+                </div>
+            </div>
+        </a>
         <a href="prata/bracelete lily.html">
             <div class='item-prata'>
                 <img src="./imgs/bracelete lily (3).jpeg" alt="">
@@ -485,17 +505,22 @@
                 </div>
             </div>
         </a>
-        <a href="prata/colar-ponto-de-luz.html">
+    </div>
+
+
+
+    <div class='estoque-prata-index-pc'>
+        <a href="prata/tornozeleira-bolinha.html">
             <div class='item-prata'>
-                <img src="./imgs/colar-ponto-de-luz (4).jpeg" alt="">
+                <img src="./imgs/Tornozeleira bolinha (1).jpeg" alt="">
                 <div class="text-prata">
-                    <p class='esgotado-loja'>ESGOTADO</p>
-                    <h1 class="nome-prata">Colar Ponto de Luz</h1>
+                    <p class='novidade-loja'>Disponível</p>
+                    <h1 class="nome-prata">Tornozeleira Bolinha</h1>
                     <div class='estrelas'>
                         <img src="imgs/Nenhuma estrela.png" alt="">
                     </div>
                     <div class="promocao">
-                        <p class="preço-loja">R$ 55,00</p>
+                        <p class="preço-loja">R$ 50,00</p>
                         <p class="opcoesdepaga">Pague à vista ou Pix</p>
                     </div>
                     <div class="botaocomprarprata">
@@ -505,11 +530,6 @@
                 </div>
             </div>
         </a>
-    </div>
-
-
-
-    <div class='estoque-prata-index-pc'>
         <a href="prata/anel-colorido.html">
             <div class='item-prata'>
                 <img src="./imgs/anel-colorido (1).jpeg" alt="">
@@ -561,26 +581,6 @@
                     </div>
                     <div class="promocao">
                         <p class="preço-loja">R$ 55,00</p>
-                        <p class="opcoesdepaga">Pague à vista ou Pix</p>
-                    </div>
-                    <div class="botaocomprarprata">
-                        <label>VER DETALHES</label>
-                    </div>
-                     
-                </div>
-            </div>
-        </a>
-        <a href="prata/colar-coracao-colorido.html">
-            <div class='item-prata'>
-                <img src="./imgs/colar coração colorido (1).jpeg" alt="">
-                <div class="text-prata">
-                    <p class='novidade-loja'>Novo</p>
-                    <h1 class="nome-prata">Colar Coração Colorido</h1>
-                    <div class='estrelas'>
-                        <img src="imgs/Nenhuma estrela.png" alt="">
-                    </div>
-                    <div class="promocao">
-                        <p class="preço-loja">R$ 80,00</p>
                         <p class="opcoesdepaga">Pague à vista ou Pix</p>
                     </div>
                     <div class="botaocomprarprata">
