--- a/pratas-tornozeleira.html
+++ b/pratas-tornozeleira.html
@@ -255,7 +255,7 @@
                 <div class='item-prata'>
                     <img src="./imgs/Tornozeleira bolinha (1).jpeg" alt="">
                     <div class="text-prata">
-                        <p class='esgotado-loja'>ESGOTADO</p>
+                        <p class='novidade-loja'>Disponível</p>
                         <h1 class="nome-prata">Tornozeleira Bolinha</h1>
                         <div class='estrelas'>
                             <img src="imgs/Nenhuma estrela.png" alt="">
