--- a/prata/tornozeleira-bolinha.html
+++ b/prata/tornozeleira-bolinha.html
@@ -227,7 +227,7 @@
             </div>
         </div>
         <section class="obs-coments-sem">
-            <a href="https://www.instagram.com/p/ClrQjJDOLK9/?utm_source=ig_web_copy_link" target="_blank">ESCREVER UM COMENTÁRIO</a>
+            <a href="">INDISPONÍVEL</a>
         </section>
     </section>
 
