--- a/prata/colar-turmalina.html
+++ b/prata/colar-turmalina.html
@@ -120,7 +120,7 @@
                 <div class='imgitem'>
                     <div class='opcoesdeimagem'>
                         <div>
-                            <img onclick="colarpontodeluzrosa2()" src="../imgs/colar-turmalina.jpeg" alt="">
+                            <img onclick="colarturmalinaimg()" src="../imgs/colar-turmalina.jpeg" alt="">
                         </div>
                     </div>
                     <div class="imagemprincipal">
