--- a/pratas.html
+++ b/pratas.html
@@ -512,27 +512,6 @@
                 </div>
             </a>
 
-            <a href="prata/brinco-mini-mao-de-fatima.html">
-                <div class='item-prata'>
-                    <img src="./imgs/brinco-mini-mao-de-fatima (1).jpeg" alt="">
-                    <div class="text-prata">
-                        <p class='novidade-loja'>Novo</p>
-                        <h1 class="nome-prata">Brinco Mini Mão de Fátima</h1>
-                        <div class='estrelas'>
-                            <img src="imgs/Nenhuma estrela.png" alt="">
-                        </div>
-                        <div class="promocao">
-                            <p class="preço-loja">R$ 25,00</p>
-                            <p class="opcoesdepaga">Pague à vista ou Pix</p>
-                        </div>
-                        <div class="botaocomprarprata">
-                            <label>VER DETALHES</label>
-                        </div>
-                         
-                    </div>
-                </div>
-            </a>
-
             <a href="prata/anel-trançado.html">
                 <div class='item-prata'>
                     <img src="./imgs/anel-traçado (1).jpeg" alt="">
@@ -609,6 +588,26 @@
                         </div>
                         <div class="promocao">
                             <p class="preço-loja"><s style="color: darkgray;">R$ 115,00</s> R$ 70,00</p>
+                            <p class="opcoesdepaga">Pague à vista ou Pix</p>
+                        </div>
+                        <div class="botaocomprarprata">
+                            <label>VER DETALHES</label>
+                        </div>
+                         
+                    </div>
+                </div>
+            </a>
+            <a href="prata/brinco-mini-mao-de-fatima.html">
+                <div class='item-prata'>
+                    <img src="./imgs/brinco-mini-mao-de-fatima (1).jpeg" alt="">
+                    <div class="text-prata">
+                        <p class='esgotado-loja'>ESGOTADO</p>
+                        <h1 class="nome-prata">Brinco Mini Mão de Fátima</h1>
+                        <div class='estrelas'>
+                            <img src="imgs/Nenhuma estrela.png" alt="">
+                        </div>
+                        <div class="promocao">
+                            <p class="preço-loja">R$ 25,00</p>
                             <p class="opcoesdepaga">Pague à vista ou Pix</p>
                         </div>
                         <div class="botaocomprarprata">
