--- a/pratas-brincos.html
+++ b/pratas-brincos.html
@@ -315,7 +315,7 @@
                 <div class='item-prata'>
                     <img src="./imgs/brinco-mini-mao-de-fatima (1).jpeg" alt="">
                     <div class="text-prata">
-                        <p class='novidade-loja'>Novo</p>
+                        <p class='esgotado-loja'>ESGOTADO</p>
                         <h1 class="nome-prata">Brinco Mini Mão de Fátima</h1>
                         <div class='estrelas'>
                             <img src="imgs/Nenhuma estrela.png" alt="">
