--- a/cetim-toucas.html
+++ b/cetim-toucas.html
@@ -179,12 +179,12 @@
         </section>
 
         <div class='estoque-prata'>
-            <a href="cetim/touca-de-cetim-dupla-face-azul-rosa.html">
+            <a href="cetim/touca-de-cetim-dupla-face-rosa-preta.html">
                 <div class='item-prata'>
-                    <img src="./imgs/touca de cetim dupla face azul rosa (1).jpeg" alt="">
+                    <img src="./imgs/touca dupla face rosa e preta (1).jpeg" alt="">
                     <div class="text-prata">
                         <p class='novidade-loja'>Novo</p>
-                        <h1 class="nome-prata">Touca de Cetim Dupla Face Azul e Rosa</h1>
+                        <h1 class="nome-prata">Touca de Cetim Dupla Face Rosa e Preta</h1>
                         <div class='estrelas'>
                             <img src="imgs/Nenhuma estrela.png" alt="">
                         </div>
@@ -199,12 +199,12 @@
                     </div>
                 </div>
             </a>
-            <a href="cetim/touca-de-cetim-dupla-face-rosa-preta.html">
+            <a href="cetim/touca-de-cetim-dupla-face-azul-rosa.html">
                 <div class='item-prata'>
-                    <img src="./imgs/touca dupla face rosa e preta (1).jpeg" alt="">
+                    <img src="./imgs/touca de cetim dupla face azul rosa (1).jpeg" alt="">
                     <div class="text-prata">
-                        <p class='novidade-loja'>Novo</p>
-                        <h1 class="nome-prata">Touca de Cetim Dupla Face Rosa e Preta</h1>
+                        <p class='esgotado-loja'>ESGOTADO</p>
+                        <h1 class="nome-prata">Touca de Cetim Dupla Face Azul e Rosa</h1>
                         <div class='estrelas'>
                             <img src="imgs/Nenhuma estrela.png" alt="">
                         </div>
