--- a/cetim.html
+++ b/cetim.html
@@ -179,26 +179,6 @@
         </section>
 
         <div class='estoque-prata'>
-            <a href="cetim/touca-de-cetim-dupla-face-azul-rosa.html">
-                <div class='item-prata'>
-                    <img src="./imgs/touca de cetim dupla face azul rosa (1).jpeg" alt="">
-                    <div class="text-prata">
-                        <p class='novidade-loja'>Novo</p>
-                        <h1 class="nome-prata">Touca de Cetim Dupla Face Azul e Rosa</h1>
-                        <div class='estrelas'>
-                            <img src="imgs/Nenhuma estrela.png" alt="">
-                        </div>
-                        <div class="promocao">
-                            <p class="preço-loja">R$ 22,50</p>
-                            <p class="opcoesdepaga">Pague à vista ou Pix</p>
-                        </div>
-                        <div class="botaocomprarprata">
-                            <label>VER DETALHES</label>
-                        </div>
-                         
-                    </div>
-                </div>
-            </a>
             <a href="cetim/touca-de-cetim-dupla-face-rosa-preta.html">
                 <div class='item-prata'>
                     <img src="./imgs/touca dupla face rosa e preta (1).jpeg" alt="">
@@ -259,6 +239,26 @@
                     </div>
                 </div>
             </a> 
+            <a href="cetim/touca-de-cetim-dupla-face-azul-rosa.html">
+                <div class='item-prata'>
+                    <img src="./imgs/touca de cetim dupla face azul rosa (1).jpeg" alt="">
+                    <div class="text-prata">
+                        <p class='esgotado-loja'>ESGOTADO</p>
+                        <h1 class="nome-prata">Touca de Cetim Dupla Face Azul e Rosa</h1>
+                        <div class='estrelas'>
+                            <img src="imgs/Nenhuma estrela.png" alt="">
+                        </div>
+                        <div class="promocao">
+                            <p class="preço-loja">R$ 22,50</p>
+                            <p class="opcoesdepaga">Pague à vista ou Pix</p>
+                        </div>
+                        <div class="botaocomprarprata">
+                            <label>VER DETALHES</label>
+                        </div>
+                         
+                    </div>
+                </div>
+            </a>
             <a href="cetim/scrunchie-de-cetim-dourado.html">
                 <div class='item-prata'>
                     <img src="./imgs/Scrunchie de cetim dourado.jpeg" alt="">
