--- a/novidades.html
+++ b/novidades.html
@@ -356,7 +356,7 @@
                 <div class='item-prata'>
                     <img src="./imgs/touca de cetim dupla face azul rosa (1).jpeg" alt="">
                     <div class="text-prata">
-                        <p class='novidade-loja'>Novo</p>
+                        <p class='esgotado-loja'>ESGOTADO</p>
                         <h1 class="nome-prata">Touca de Cetim Dupla Face Azul e Rosa</h1>
                         <div class='estrelas'>
                             <img src="imgs/Nenhuma estrela.png" alt="">
