--- a/cetim/touca-de-cetim-dupla-face-azul-rosa.html
+++ b/cetim/touca-de-cetim-dupla-face-azul-rosa.html
@@ -148,9 +148,9 @@
                         </h2>
                             <a href="../institucional/guia-de-tamanhos/colares.html" target="_blank"><u>Guia de Tamanhos</u></a>
                     </div>
-                    <label onclick="touca_cetim_dupla_face_azul_rosa_comp()"><i class="fas fa-shopping-bag"></i> COMPRAR</label>
-                    <label id='cart' onclick="touca_cetim_dupla_face_azul_rosa_enco()"><i class="fas fa-cart-plus"></i> ADICIONAR AO CARRINHO</label>
-                    <!--<label class="indisponivel" onclick="touca_cetim_dupla_face_azul_rosa_indisponivel()"><i class="fas fa-shopping-bag"></i> AVISE-ME QUANDO CHEGAR</label>-->
+                    <!--<label onclick="touca_cetim_dupla_face_azul_rosa_comp()"><i class="fas fa-shopping-bag"></i> COMPRAR</label>
+                    <label id='cart' onclick="touca_cetim_dupla_face_azul_rosa_enco()"><i class="fas fa-cart-plus"></i> ADICIONAR AO CARRINHO</label>!-->
+                    <label class="indisponivel" onclick="touca_cetim_dupla_face_azul_rosa_indisponivel()"><i class="fas fa-shopping-bag"></i> AVISE-ME QUANDO CHEGAR</label>
                     
                     <p id='entregue'>Este produto é vendido e entregue pela <a href=''>LARI'S</a>.</p>
 
