--- a/index.html
+++ b/index.html
@@ -415,17 +415,17 @@
                 </div>
             </div>
         </a>
-        <a href="prata/trio-de-estrelinha-de-luz.html">
+        <a href="cetim/touca-de-cetim-dupla-face-rosa-preta.html">
             <div class='item-prata'>
-                <img src="./imgs/trio-de-estrelinha-de-luz (1).jpeg" alt="">
+                <img src="./imgs/touca dupla face rosa e preta (1).jpeg" alt="">
                 <div class="text-prata">
                     <p class='novidade-loja'>Novo</p>
-                    <h1 class="nome-prata">Brinco Trio Estrelinha de Luz</h1>
+                    <h1 class="nome-prata">Touca de Cetim Dupla Face Rosa e Preta</h1>
                     <div class='estrelas'>
                         <img src="imgs/Nenhuma estrela.png" alt="">
                     </div>
                     <div class="promocao">
-                        <p class="preço-loja">R$ 70,00</p>
+                        <p class="preço-loja">R$ 22,50</p>
                         <p class="opcoesdepaga">Pague à vista ou Pix</p>
                     </div>
                     <div class="botaocomprarprata">
@@ -534,7 +534,7 @@
             <div class='item-prata'>
                 <img src="./imgs/anel-colorido (1).jpeg" alt="">
                 <div class="text-prata">
-                    <p class='novidade-loja'>Disponível</p>
+                    <p class='esgotado-loja'>ESGOTADO</p>
                     <h1 class="nome-prata">Anel Colorido</h1>
                     <div class='estrelas'>
                         <img src="imgs/Nenhuma estrela.png" alt="">
