--- a/novidades.html
+++ b/novidades.html
@@ -196,7 +196,7 @@
                 <div class='item-prata'>
                     <img src="./imgs/anel-colorido (1).jpeg" alt="">
                     <div class="text-prata">
-                        <p class='novidade-loja'>Disponível</p>
+                        <p class='esgotado-loja'>ESGOTADO</p>
                         <h1 class="nome-prata">Anel Colorido</h1>
                         <div class='estrelas'>
                             <img src="imgs/Nenhuma estrela.png" alt="">
@@ -600,7 +600,7 @@
                 <div class='item-prata'>
                     <img src="./imgs/trio-de-estrelinha-de-luz (1).jpeg" alt="">
                     <div class="text-prata">
-                        <p class='novidade-loja'>Novo</p>
+                        <p class='esgotado-loja'>ESGOTADO</p>
                         <h1 class="nome-prata">Brinco Trio Estrelinha de Luz</h1>
                         <div class='estrelas'>
                             <img src="imgs/Nenhuma estrela.png" alt="">
@@ -683,7 +683,7 @@
                 <div class='item-prata'>
                     <img src="./imgs/anel-traçado (1).jpeg" alt="">
                     <div class="text-prata">
-                        <p class='novidade-loja'>Novo</p>
+                        <p class='esgotado-loja'>ESGOTADO</p>
                         <h1 class="nome-prata">Anel Trançado</h1>
                         <div class='estrelas'>
                             <img src="imgs/Nenhuma estrela.png" alt="">
