--- a/prata/anel-quadrado.html
+++ b/prata/anel-quadrado.html
@@ -145,8 +145,8 @@
                     </select></h2>
                     <div class='tamanhocenterleft'>
                         <h2 class="tamanhofrase">Selecione Tamanho: <select name="Tamanho" id="tamanho">
-                            <option value="15" selected>15</option>
-                            <option value="20">20</option>
+                            <option value="15" disabled>15 (esgotado)</option>
+                            <option value="20" selected>20</option>
                         </select>
                         </h2>
                             <a href="../institucional/guia-de-tamanhos/aneis.html" target="_blank"><u>Guia de Tamanhos</u></a>
