--- a/admin/account.html
+++ b/admin/account.html
@@ -64,7 +64,7 @@
     <div class="overview-page">
         <div class="backgrond" onclick="fecharmenuprofile()"></div>
         <div class="header-page">
-            <h1>Overview</h1>
+            <h1>Conta</h1>
             <div class="profile">
                 <i class="fa-regular fa-bell" onclick="notificacaoopen()"></i>
 
@@ -113,14 +113,23 @@
         </div>
         <div class="content-page">
             <div class="blocks-contents">
-                <div class="block">
-                    Nas próximas atualizações
+                <div class='form-profile'>
+                    <div>
+                    <img src="../imgs/Logo.webp" alt="">
+                    <img class="fotoperfilprofile" src="img/usuario-sem-foto.png" alt="">
                 </div>
-                <div class="block">
-                    Nas próximas atualizações
-                </div>
-                <div class="block">
-                    Nas próximas atualizações
+                    <div class="form-profile-items">
+                        <div class="titleprofile">
+                            <h1 class="nameuser">Nome</h1>
+                            <p class="user">user</p>
+                        </div>
+                        <div class="infogeralperfil">
+                            <h1>Informações Gerais</h1>
+                            <p class="nomecompleto">Nome completo: </p>
+                            <p class="cpf">CPF: não cadastrado</p>
+                            <p class="funcao">Função: </p>
+                        </div>
+                    </div>
                 </div>
             </div>
             
