--- a/novidades.html
+++ b/novidades.html
@@ -216,7 +216,7 @@
                 <div class='item-prata'>
                     <img src="./imgs/bracelete lily (3).jpeg" alt="">
                     <div class="text-prata">
-                        <p class='novidade-loja'>Novo</p>
+                        <p class='esgotado-loja'>ESGOTADO</p>
                         <h1 class="nome-prata">Bracelete Lily</h1>
                         <div class='estrelas'>
                             <img src="imgs/Nenhuma estrela.png" alt="">
