--- a/index.html
+++ b/index.html
@@ -489,7 +489,7 @@
             <div class='item-prata'>
                 <img src="./imgs/bracelete lily (3).jpeg" alt="">
                 <div class="text-prata">
-                    <p class='novidade-loja'>Novo</p>
+                    <p class='esgotado-loja'>ESGOTADO</p>
                     <h1 class="nome-prata">Bracelete Lily</h1>
                     <div class='estrelas'>
                         <img src="imgs/Nenhuma estrela.png" alt="">
@@ -554,7 +554,7 @@
             <div class='item-prata'>
                 <img src="./imgs/bracelete lily (3).jpeg" alt="">
                 <div class="text-prata">
-                    <p class='novidade-loja'>Novo</p>
+                    <p class='esgotado-loja'>ESGOTADO</p>
                     <h1 class="nome-prata">Bracelete Lily</h1>
                     <div class='estrelas'>
                         <img src="imgs/Nenhuma estrela.png" alt="">
