--- a/index.html
+++ b/index.html
@@ -465,17 +465,17 @@
     </section>
 
     <div class='estoque-prata-index'>
-        <a href="prata/tornozeleira-bolinha.html">
+        <a href="prata/colar-ponto-de-luz-pink.html">
             <div class='item-prata'>
-                <img src="./imgs/Tornozeleira bolinha (1).jpeg" alt="">
+                <img src="./imgs/colar-ponto-de-luz-pink.webp" alt="">
                 <div class="text-prata">
-                    <p class='novidade-loja'>Disponível</p>
-                    <h1 class="nome-prata">Tornozeleira Bolinha</h1>
+                    <p class='novidade-loja'>Novo</p>
+                    <h1 class="nome-prata">Colar Ponto de Luz Pink</h1>
                     <div class='estrelas'>
                         <img src="imgs/Nenhuma estrela.png" alt="">
                     </div>
                     <div class="promocao">
-                        <p class="preço-loja">R$ 50,00</p>
+                        <p class="preço-loja">R$ 80,00</p>
                         <p class="opcoesdepaga">Pague à vista ou Pix</p>
                     </div>
                     <div class="botaocomprarprata">
@@ -485,17 +485,17 @@
                 </div>
             </div>
         </a>
-        <a href="prata/bracelete lily.html">
+        <a href="prata/brinco-heart.html">
             <div class='item-prata'>
-                <img src="./imgs/bracelete lily (3).jpeg" alt="">
+                <img src="./imgs/brinco-coração.webp" alt="">
                 <div class="text-prata">
-                    <p class='esgotado-loja'>ESGOTADO</p>
-                    <h1 class="nome-prata">Bracelete Lily</h1>
+                    <p class='novidade-loja'>Novo</p>
+                    <h1 class="nome-prata">Brinco Heart</h1>
                     <div class='estrelas'>
                         <img src="imgs/Nenhuma estrela.png" alt="">
                     </div>
                     <div class="promocao">
-                        <p class="preço-loja">R$ 35,00</p>
+                        <p class="preço-loja">R$ 50,00 -- 55,00</p>
                         <p class="opcoesdepaga">Pague à vista ou Pix</p>
                     </div>
                     <div class="botaocomprarprata">
@@ -510,17 +510,17 @@
 
 
     <div class='estoque-prata-index-pc'>
-        <a href="prata/tornozeleira-bolinha.html">
+        <a href="prata/colar-ponto-de-luz-pink.html">
             <div class='item-prata'>
-                <img src="./imgs/Tornozeleira bolinha (1).jpeg" alt="">
+                <img src="./imgs/colar-ponto-de-luz-pink.webp" alt="">
                 <div class="text-prata">
-                    <p class='novidade-loja'>Disponível</p>
-                    <h1 class="nome-prata">Tornozeleira Bolinha</h1>
+                    <p class='novidade-loja'>Novo</p>
+                    <h1 class="nome-prata">Colar Ponto de Luz Pink</h1>
                     <div class='estrelas'>
                         <img src="imgs/Nenhuma estrela.png" alt="">
                     </div>
                     <div class="promocao">
-                        <p class="preço-loja">R$ 50,00</p>
+                        <p class="preço-loja">R$ 80,00</p>
                         <p class="opcoesdepaga">Pague à vista ou Pix</p>
                     </div>
                     <div class="botaocomprarprata">
@@ -530,17 +530,17 @@
                 </div>
             </div>
         </a>
-        <a href="prata/anel-colorido.html">
+        <a href="prata/brinco-heart.html">
             <div class='item-prata'>
-                <img src="./imgs/anel-colorido (1).jpeg" alt="">
+                <img src="./imgs/brinco-coração.webp" alt="">
                 <div class="text-prata">
-                    <p class='esgotado-loja'>ESGOTADO</p>
-                    <h1 class="nome-prata">Anel Colorido</h1>
+                    <p class='novidade-loja'>Novo</p>
+                    <h1 class="nome-prata">Brinco Heart</h1>
                     <div class='estrelas'>
                         <img src="imgs/Nenhuma estrela.png" alt="">
                     </div>
                     <div class="promocao">
-                        <p class="preço-loja">R$ 65,00</p>
+                        <p class="preço-loja">R$ 50,00 -- 55,00</p>
                         <p class="opcoesdepaga">Pague à vista ou Pix</p>
                     </div>
                     <div class="botaocomprarprata">
@@ -550,17 +550,17 @@
                 </div>
             </div>
         </a>
-        <a href="prata/bracelete lily.html">
+        <a href="prata/anel-dois-em-um.html">
             <div class='item-prata'>
-                <img src="./imgs/bracelete lily (3).jpeg" alt="">
+                <img src="./imgs/anel-dois-em-um.webp" alt="">
                 <div class="text-prata">
-                    <p class='esgotado-loja'>ESGOTADO</p>
-                    <h1 class="nome-prata">Bracelete Lily</h1>
+                    <p class='novidade-loja'>Novo</p>
+                    <h1 class="nome-prata">Anel Dois em Um</h1>
                     <div class='estrelas'>
                         <img src="imgs/Nenhuma estrela.png" alt="">
                     </div>
                     <div class="promocao">
-                        <p class="preço-loja">R$ 35,00</p>
+                        <p class="preço-loja">R$ 90,00</p>
                         <p class="opcoesdepaga">Pague à vista ou Pix</p>
                     </div>
                     <div class="botaocomprarprata">
@@ -570,17 +570,17 @@
                 </div>
             </div>
         </a>
-        <a href="prata/colar-ponto-de-luz.html">
+        <a href="prata/anel-coracao-cravejado.html">
             <div class='item-prata'>
-                <img src="./imgs/colar-ponto-de-luz (4).jpeg" alt="">
+                <img src="./imgs/ANEL-CORAÇÃO-CRAVEJADO.webp" alt="">
                 <div class="text-prata">
-                    <p class='esgotado-loja'>ESGOTADO</p>
-                    <h1 class="nome-prata">Colar Ponto de Luz</h1>
+                    <p class='novidade-loja'>Novo</p>
+                    <h1 class="nome-prata">Anel Coração Cravejado</h1>
                     <div class='estrelas'>
                         <img src="imgs/Nenhuma estrela.png" alt="">
                     </div>
                     <div class="promocao">
-                        <p class="preço-loja">R$ 55,00</p>
+                        <p class="preço-loja">R$ 75,00</p>
                         <p class="opcoesdepaga">Pague à vista ou Pix</p>
                     </div>
                     <div class="botaocomprarprata">
