--- a/pratas-aneis.html
+++ b/pratas-aneis.html
@@ -103,7 +103,7 @@
                 </div>
                 <div class="topcard">
                     <h1>ANÉIS</h1>
-                    <p>5 Produtos</p>
+                    <p>7 Produtos</p>
                 </div>
                 <div>
                     <p class='desccard'>A Prata de Lei também é conhecida pelos brasileiros como Prata 925. Ambas são ideais para a fabricação de joias e têm grau de pureza de 92,5%, respectivamente, o que garante a qualidade, o brilho e a durabilidade de uma joia em prata.<br>Fonte: pratafina.com.br</p>
@@ -229,6 +229,46 @@
         </section>
 
         <div class='estoque-prata'>
+            <a href="prata/anel-dois-em-um.html">
+                <div class='item-prata'>
+                    <img src="./imgs/anel-dois-em-um.webp" alt="">
+                    <div class="text-prata">
+                        <p class='novidade-loja'>Novo</p>
+                        <h1 class="nome-prata">Anel Dois em Um</h1>
+                        <div class='estrelas'>
+                            <img src="imgs/Nenhuma estrela.png" alt="">
+                        </div>
+                        <div class="promocao">
+                            <p class="preço-loja">R$ 90,00</p>
+                            <p class="opcoesdepaga">Pague à vista ou Pix</p>
+                        </div>
+                        <div class="botaocomprarprata">
+                            <label>VER DETALHES</label>
+                        </div>
+                         
+                    </div>
+                </div>
+            </a>
+            <a href="prata/anel-coracao-cravejado.html">
+                <div class='item-prata'>
+                    <img src="./imgs/ANEL-CORAÇÃO-CRAVEJADO.webp" alt="">
+                    <div class="text-prata">
+                        <p class='novidade-loja'>Novo</p>
+                        <h1 class="nome-prata">Anel Coração Cravejado</h1>
+                        <div class='estrelas'>
+                            <img src="imgs/Nenhuma estrela.png" alt="">
+                        </div>
+                        <div class="promocao">
+                            <p class="preço-loja">R$ 75,00</p>
+                            <p class="opcoesdepaga">Pague à vista ou Pix</p>
+                        </div>
+                        <div class="botaocomprarprata">
+                            <label>VER DETALHES</label>
+                        </div>
+                         
+                    </div>
+                </div>
+            </a>
             <a href="prata/anel-quadrado.html">
                 <div class='item-prata'>
                     <img src="./imgs/anel-quadrado (3).jpeg" alt="">
