--- a/pratas-brincos.html
+++ b/pratas-brincos.html
@@ -103,7 +103,7 @@
                 </div>
                 <div class="topcard">
                     <h1>BRINCOS</h1>
-                    <p>18 Produtos</p>
+                    <p>19 Produtos</p>
                 </div>
                 <div>
                     <p class='desccard'>A Prata de Lei também é conhecida pelos brasileiros como Prata 925. Ambas são ideais para a fabricação de joias e têm grau de pureza de 92,5%, respectivamente, o que garante a qualidade, o brilho e a durabilidade de uma joia em prata.<br>Fonte: pratafina.com.br</p>
@@ -229,6 +229,27 @@
         </section>
 
         <div class='estoque-prata'>
+            <a href="prata/brinco-heart.html">
+                <div class='item-prata'>
+                    <img src="./imgs/brinco-coração.webp" alt="">
+                    <div class="text-prata">
+                        <p class='novidade-loja'>Novo</p>
+                        <h1 class="nome-prata">Brinco Heart</h1>
+                        <div class='estrelas'>
+                            <img src="imgs/Nenhuma estrela.png" alt="">
+                        </div>
+                        <div class="promocao">
+                            <p class="preço-loja">R$ 50,00 -- 55,00</p>
+                            <p class="opcoesdepaga">Pague à vista ou Pix</p>
+                        </div>
+                        <div class="botaocomprarprata">
+                            <label>VER DETALHES</label>
+                        </div>
+                         
+                    </div>
+                </div>
+            </a>
+            
             <a href="prata/trio-rosa-claro.html">
                 <div class='item-prata'>
                     <img src="./imgs/trio rosa claro (1).jpeg" alt="">
