--- a/pratas-colares.html
+++ b/pratas-colares.html
@@ -103,7 +103,7 @@
                 </div>
                 <div class="topcard">
                     <h1>COLARES</h1>
-                    <p>7 Produtos</p>
+                    <p>8 Produtos</p>
                 </div>
                 <div>
                     <p class='desccard'>A Prata de Lei também é conhecida pelos brasileiros como Prata 925. Ambas são ideais para a fabricação de joias e têm grau de pureza de 92,5%, respectivamente, o que garante a qualidade, o brilho e a durabilidade de uma joia em prata.<br>Fonte: pratafina.com.br</p>
@@ -229,7 +229,26 @@
         </section>
 
         <div class='estoque-prata'>
-            
+            <a href="prata/colar-ponto-de-luz-pink.html">
+                <div class='item-prata'>
+                    <img src="./imgs/colar-ponto-de-luz-pink.webp" alt="">
+                    <div class="text-prata">
+                        <p class='novidade-loja'>Novo</p>
+                        <h1 class="nome-prata">Colar Ponto de Luz Pink</h1>
+                        <div class='estrelas'>
+                            <img src="imgs/Nenhuma estrela.png" alt="">
+                        </div>
+                        <div class="promocao">
+                            <p class="preço-loja">R$ 80,00</p>
+                            <p class="opcoesdepaga">Pague à vista ou Pix</p>
+                        </div>
+                        <div class="botaocomprarprata">
+                            <label>VER DETALHES</label>
+                        </div>
+                         
+                    </div>
+                </div>
+            </a>
             <a href="prata/colar-coracao-colorido.html">
                 <div class='item-prata'>
                     <img src="./imgs/colar coração colorido (1).jpeg" alt="">
