--- a/admin/index.html
+++ b/admin/index.html
@@ -80,12 +80,23 @@
             <h1>Notificações</h1>
             <div class="notifications-blocks">
                 <div class="not-block">
-                    <h2>Atualização 0.1 (23:00 de 17/05/2022)</h2>
+                    <h2>Atualização 0.2 (20:27 de 30/05/2023)</h2>
+                    <p>Listagram oficial:</p>
+                    <p>* Opção "Overview" sendo desenvolvida. Opções que são esperadas:</p>
+                    <p>* -> Visão Geral do Sistema LARI'S</p>
+                    <p>* -> Média de Ganhos e Perdas Mensais</p>
+                    <p>* -> Widgets Interativos</p>
+                    <p>* Opção "Planilha", disponível no website da administração, foi lançada com êxito</p>
+                    <p>Autor: Vinícius</p>
+                </div>
+                <div class="not-block">
+                    <h2>Atualização 0.1 (23:00 de 17/05/2023)</h2>
                     <p>Mudanças no site oficial/admin</p>
                     <p>Listagram oficial:</p>
                     <p>* Mudanças no estoque das pratas</p>
                     <p>* Mudanças na estrutura da página da administração</p>
                     <p>* Mudanças no estilo da página da administração</p>
+                    <p>Autor: Vinícius</p>
                 </div>
             </div>
         </div>
@@ -113,15 +124,7 @@
         </div>
         <div class="content-page">
             <div class="blocks-contents">
-                <div class="block">
-                    Nas próximas atualizações
-                </div>
-                <div class="block">
-                    Nas próximas atualizações
-                </div>
-                <div class="block">
-                    Nas próximas atualizações
-                </div>
+
             </div>
             
         </div>
